# prettiest

./: CMakeLists.txt  build  test
Include/Prettiest/: prettiest.h
Tests/: CMakeLists.txt  test~All.cpp
